--- a/4lines-react/package.json
+++ b/4lines-react/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "firebase": "^10.12.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
